<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Maos</string>
    <string name="menu_dashboard">Beranda</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_profil">Profil</string>
    <string name="large_text">" \"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.\"         \"It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n\"         \"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.\"         \"It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n\"         \"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.\"         \"It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n\"         \"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.\"         \"It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n\" "</string>
    <string name="loading">Memuat…</string>
    <string name="tab_title_1">Target</string>
    <string name="tab_title_2">Pengingat</string>
    <string name="tab_title_3">Kutipan</string>
    <string name="tentang_app">Tentang Aplikasi</string>
    <string name="tim_kami">Tim Kami</string>
    <string name="arief_zuhri">Arief Zuhri</string>
    <string name="universitas_gadjah_mada">Universitas Gadjah Mada</string>
    <string name="ariefzuhri">ariefzuhri</string>
    <string name="hubertus_rino_augenio">Hubertus Rino Augenio</string>
    <string name="rinogen10">rinogen10</string>
    <string name="nanang_arifudin">Nanang Arifudin</string>
    <string name="nanangarif08">nanangarif08</string>
    <string name="kredit">Kredit</string>
    <string name="api_wilayah_oleh_fariz_ramadhan_farizdotid">Api Wilayah oleh Fariz Ramadhan (farizdotid)</string>
    <string name="tempat_peminjaman">Tempat Peminjaman</string>
    <string name="tanggal_pengembalian">Tanggal Pengembalian</string>
    <string name="sudah_kembali">Sudah Kembali</string>
    <string name="akun_pengguna">Akun pengguna</string>
    <string name="email_pengguna">Email pengguna</string>
    <string name="hasil_validasi_pengguna">Hasil validasi pengguna</string>
    <string name="validasi_pengguna">Validasi pengguna</string>
    <string name="akun_mitra">Akun mitra</string>
    <string name="email_mitra">Email mitra</string>
    <string name="tambah_kartu_member">Tambah kartu member</string>
    <string name="validasi_mitra">Validasi mitra</string>
    <string name="hasil_validasi_mitra">Hasil validasi mitra</string>
    <string name="progres_halaman">Progres halaman</string>
    <string name="_0">0</string>
    <string name="data_buku">Data buku</string>
    <string name="jumlah_halaman">Jumlah halaman</string>
    <string name="target_halaman_per_hari">Target halaman per hari</string>
    <string name="pengingat">Pengingat</string>
    <string name="pilih_jam">Pilih jam</string>
    <string name="senin">Senin</string>
    <string name="minggu">Minggu</string>
    <string name="sabtu">Sabtu</string>
    <string name="jumat">Jumat</string>
    <string name="kamis">Kamis</string>
    <string name="rabu">Rabu</string>
    <string name="selasa">Selasa</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi kata sandi</string>
    <string name="bookmark">Bookmark</string>
    <string name="catatanku">CatatanKu</string>
    <string name="belum_ada_bookmark">Belum ada bookmark</string>
    <string name="penulis">Penulis</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="ketersediaan">Ketersediaan</string>
    <string name="ya">Ya</string>
    <string name="foto_buku">Foto Buku</string>
    <string name="title_book">Title Book</string>
    <string name="mantrijeron_kota_yogyakarta">Mantrijeron, kota Yogyakarta</string>
    <string name="mega_bank_saintek_2021">Mega Bank Saintek 2021</string>
    <string name="membership">Membership</string>
    <string name="silakan_masuk_untuk_melihat_halaman_ini">Silakan masuk untuk melihat halaman ini</string>
    <string name="profil">Profil</string>
    <string name="kelola_katalog">Kelola katalog</string>
    <string name="daftar_anggota">Daftar anggota</string>
    <string name="edit_profil">Edit profil</string>
    <string name="ganti_kata_sandi">Ganti kata sandi</string>
    <string name="tentang_aplikasi">Tentang aplikasi</string>
    <string name="lokasi">Lokasi</string>
    <string name="provinsi">Provinsi</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="informasi_peminjaman">Informasi Peminjaman</string>
    <string name="buku_jogja_sudah_berdiri_sejak_2017_yang_dimulai_dengan_membentuk_komunitas_untuk_umum_dengan_agenda_peprustakaan_keliling_untuk_sekolah_dasar_dan_taman_kanak_kanak">buku_jogja sudah berdiri sejak 2017 yang dimulai dengan membentuk komunitas untuk umum dengan agenda peprustakaan keliling untuk sekolah dasar dan taman kanak-kanak</string>
    <string name="peraturan_peminjaman">Peraturan Peminjaman</string>
    <string name="sed_ut_perspiciatis_unde_omnis_iste_natus_error_sit_voluptatem_accusantium_doloremque_laudantium_totam_rem_aperiam_eaque_ipsa_quae_ab_illo_inventore_veritatis_et_quasi_architecto_beatae_vitae_dicta_sunt_explicabo">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="tambah_member">Tambah member</string>
    <string name="buat_akun_mitra">Buat akun mitra</string>
    <string name="keluar_akun">Keluar akun</string>
    <string name="cari_penyedia_buku">Cari penyedia buku</string>
    <string name="daftar_jadi_penyedia_buku">Daftar Jadi Penyedia Buku</string>
    <string name="stok_tersedia">Stok tersedia</string>
    <string name="ketersediaan_stok">Ketersediaan stok</string>
    <string name="setel_ulang">Setel ulang</string>
    <string name="mohon_tunggu">Mohon tunggu…</string>
    <string name="done">Done</string>
    <string name="pilih_foto">Pilih foto</string>
    <string name="nomor_whatsapp">Nomor WhatsApp</string>
    <string name="awali_nomor_dengan_62">Awali nomor dengan 62</string>
    <string name="kartu_identitas">Kartu identitas</string>
    <string name="ambil_foto">Ambil foto</string>
    <string name="detail_buku">Detail Buku</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="penulis_buku">Penulis Buku</string>
    <string name="peminjaman">Peminjaman</string>
    <string name="tentang_buku">Tentang Buku</string>
    <string name="tersedia">Tersedia</string>
    <string name="hapus">Hapus</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="atau">atau</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="daftar">Daftar</string>
    <string name="saya_belum_punya_akun">Saya belum punya akun,</string>
    <string name="selamat_ndatang">Selamat\nDatang</string>
    <string name="ayo_jadi_member">Ayo Jadi Member</string>
    <string name="member_merupakan_layanan_untuk_mendapatkan_akses_lebih_saat_melakukan_peminjaman_kepada_penyedia_buku">Member merupakan layanan untuk mendapatkan akses lebih saat melakukan peminjaman kepada penyedia buku.</string>
    <string name="dengan_menjadi_member_kamu_bisa_mendapatkan_beberapa_keuntungan_sesuai_dengan_ketentuan_penyedia_buku_seperti_melakukan_peminjaman_dengan_waktu_yang_lebih_lama_ataupun_melakukan_peminjaman_untuk_lebih_dari_1_buku">Dengan menjadi member, kamu bisa mendapatkan beberapa keuntungan sesuai dengan ketentuan penyedia buku, seperti melakukan peminjaman dengan waktu yang lebih lama ataupun melakukan peminjaman untuk lebih dari 1 buku.</string>
    <string name="keuntungan">Keuntungan</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="paket_berlangganan_30_hari">Paket Berlangganan 30 Hari</string>
    <string name="rp10_000">Rp10.000</string>
    <string name="pilih_penyedia_buku">Pilih penyedia buku</string>
    <string name="ajukan_pendaftaran">Ajukan Pendaftaran</string>
    <string name="nama_lengkap">Nama lengkap</string>
    <string name="koson">-</string>
    <string name="buku_jogja">buku_jogja</string>
    <string name="buku_jogja_sudah_berdiri_sejak_2017_yang_dimulai_dengan_membentuk_komunitas_untuk_umum_dengan_agenda_peprustakaan_keliling_untuk_sekolah_dasar_dan_taman_ka">buku_jogja sudah berdiri sejak 2017 yang dimulai dengan membentuk komunitas untuk umum dengan agenda peprustakaan keliling untuk sekolah dasar dan taman ka</string>
    <string name="mantrijeron_kota_yogyakarta_di_yogyakarta">Mantrijeron, Kota Yogyakarta, DI Yogyakarta</string>
    <string name="populer" tools:ignore="Typos">Populer</string>
    <string name="daftar_buku">Daftar Buku</string>
    <string name="kode_member">Kode Member:</string>
    <string name="berlangganan">Berlangganan</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="pinjam_sekarang">Pinjam Sekarang</string>
    <string name="foto_profil">Foto profil</string>
    <string name="foto_sampul">Foto sampul</string>
    <string name="nama">Nama</string>
    <string name="no_wa_62xx_nama_pengguna_ig">No. WA (62xx)/nama pengguna IG</string>
    <string name="pilih_salah_satu_sebagai_opsi_kontak_peminjaman_whatsapp_atau_instagram">Pilih salah satu sebagai opsi kontak peminjaman (WhatsApp atau Instagram)</string>
    <string name="tentang">Tentang</string>
    <string name="simpan">Simpan</string>
    <string name="pengiriman_luar_kota">Pengiriman luar kota</string>
    <string name="sistem_cod">Sistem COD</string>
    <string name="pengantaran_buku">Pengantaran buku</string>
    <string name="jelaskan_aturan_peminjaman_dan_juga_keuntungan_sebagai_member">Jelaskan aturan peminjaman dan juga keuntungan sebagai member</string>
    <string name="kamu_bisa_mencantumkan_aturan_yang_paling_ingin_disorot">Kamu bisa mencantumkan aturan yang paling ingin disorot</string>
    <string name="alamat">Alamat</string>
    <string name="filter">Filter</string>
</resources>