<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".developer.view.AddMemberCardActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:title="Tambah Member" />

    <ScrollView
        style="@style/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/akun_pengguna"
                android:textColor="@color/black"
                android:textSize="@dimen/font_md"/>

            <EditText
                android:id="@+id/edt_user_email_amc"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_pengguna"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/tv_user_validation_amc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasil_validasi_pengguna"
                android:textColor="@color/orange"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_user_validation_amc"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/validasi_pengguna"
                android:layout_marginVertical="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/akun_mitra"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:textSize="@dimen/font_md"/>

            <EditText
                android:id="@+id/edt_mitra_email_amc"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_mitra"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/tv_mitra_validation_amc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasil_validasi_mitra"
                android:textColor="@color/orange"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_mitra_validation_amc"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/validasi_mitra"
                android:layout_marginVertical="8dp"/>

            <Button
                android:id="@+id/btn_add_amc"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tambah_kartu_member"
                android:layout_marginTop="24dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>