<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".catatanku.target.view.AddUpdateTargetActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:title="Tambah Target" />

    <ScrollView
        style="@style/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progres_halaman"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/edt_pages_read"
                    style="@style/EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/_0"
                    android:inputType="number"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:layout_marginEnd="8dp"
                    android:maxLength="9"
                    tools:ignore="Autofill" />

                <ImageButton
                    android:id="@+id/btn_add"
                    style="@style/Button.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add"
                    android:padding="8dp"
                    android:layout_marginHorizontal="4dp"
                    tools:ignore="ContentDescription"
                    app:tint="@color/white" />

                <ImageButton
                    android:id="@+id/btn_remove"
                    style="@style/Button.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_remove"
                    android:padding="8dp"
                    android:layout_marginHorizontal="4dp"
                    tools:ignore="ContentDescription"
                    app:tint="@color/orange" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_hint_daily_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:layout_marginTop="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_buku"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/edt_book_title"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/judul_buku"
                android:inputType="textCapWords"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edt_total_pages"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jumlah_halaman"
                android:inputType="number"
                android:maxLength="9"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edt_daily_pages"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/target_halaman_per_hari"
                android:inputType="number"
                android:maxLength="9"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pengingat"
                android:checked="true"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/edt_time"
                style="@style/EditText.Clickable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pilih_jam"
                android:drawableStart="@drawable/ic_time"
                android:drawablePadding="8dp"
                android:textColor="@drawable/selector_edit_text"
                tools:ignore="Autofill" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="8dp"
                android:layout_marginBottom="8dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_monday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/senin"
                    android:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_tuesday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selasa"
                    android:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_wednesday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rabu"
                    android:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_thursday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kamis"
                    android:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_friday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jumat"
                    android:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_saturday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sabtu"
                    android:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_sunday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minggu"
                    android:checked="true" />
            </com.google.android.material.chip.ChipGroup>

            <Button
                android:id="@+id/btn_save"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simpan"
                android:layout_marginTop="24dp"/>

            <Button
                android:id="@+id/btn_delete"
                style="@style/Button.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hapus"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>