<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.mitra.view.UpdateMitraProfileActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:title="Edit Profil" />

    <ScrollView
        style="@style/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tv_membership_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tidak terdaftar dalam program membership"
                android:textColor="@color/gray"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foto_profil"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_logo_ump"
                    style="@style/ImageView.Profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>

                <Button
                    android:id="@+id/btn_logo_ump"
                    style="@style/Button.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_foto"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foto_sampul"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/img_banner_ump"
                    style="@style/ImageView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:riv_corner_radius="8dp"/>

                <Button
                    android:id="@+id/btn_banner_ump"
                    style="@style/Button.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_foto"
                    android:layout_gravity="start"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/edt_name_ump"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:inputType="textCapWords|textPersonName"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edt_whatsapp_ump"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_wa_62xx_nama_pengguna_ig"
                android:inputType="text"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pilih_salah_satu_sebagai_opsi_kontak_peminjaman_whatsapp_atau_instagram"
                android:textColor="@color/gray"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/edt_description_ump"
                style="@style/EditText.MultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tentang"
                android:layout_marginTop="16dp"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kamu_bisa_mencantumkan_aturan_yang_paling_ingin_disorot"
                android:textColor="@color/gray"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/edt_address_ump"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alamat"
                android:inputType="textCapWords"
                tools:ignore="Autofill" />

            <Spinner
                android:id="@+id/sp_provinces_ump"
                style="@style/Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/sp_regencies_ump"
                style="@style/Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/sp_districts_ump"
                style="@style/Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_rules_ump"
                style="@style/EditText.MultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peraturan_peminjaman"
                android:layout_marginTop="16dp"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jelaskan_aturan_peminjaman_dan_juga_keuntungan_sebagai_member"
                android:textColor="@color/gray"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengantaran_buku"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="8dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_cod_ump"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sistem_cod" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_kirim_luar_kota_ump"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pengiriman_luar_kota" />
            </com.google.android.material.chip.ChipGroup>

            <Button
                android:id="@+id/btn_save_ump"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simpan"
                android:layout_marginTop="24dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>