<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".search.view.BookFilterFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"/>

    <TextView
        android:id="@+id/tv_reset_bf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setel_ulang"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ketersediaan_stok"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipSpacingHorizontal="8dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_only_available_bf"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stok_tersedia" />
    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/btn_apply_bf"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter"/>
</LinearLayout>